--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -31,3 +31,12 @@
 .mentioFns__input {
     padding-left: 10px;
 }
+.error textarea {
+    border: 1px solid red !important;
+}
+.errorMsg {
+    color: red;
+    font-size: 15px;
+    text-align: center;
+    width: 100%;
+}
