--- a/src/pages/wallet.css
+++ b/src/pages/wallet.css
@@ -28,9 +28,9 @@
     border: 1px solid white;
     border-left: none;
 }
-.error {
+/* .error {
     display: none;
-}
+} */
 .errorsign {
     border-radius: 5px;
     font-weight: 600;
@@ -44,6 +44,12 @@
 .main-input {
     border-top: 1px solid white;
     border-bottom: 1px solid white;
+    border-left: none;
+    border-right: none;
+    background-color: #2e3234;
+    height: 100%;
+    width: 100%;
+    padding: 10px;
 }
 .alert-confirm-main {
     background-color: #202327 !important;
@@ -73,4 +79,44 @@
     color: white !important;
     border: 1px solid #353a40;
     width: 70px;
+}
+.cancel_btn {
+    border: 1px solid white;
+    background-color: transparent;
+    width: 100%;
+    color: white;
+    font-size: 15px;
+    padding: 5px;
+    border-radius: 20px;
+}
+.next_btn {
+    border: 1px solid black;
+    background-color: black;
+    width: 100%;
+    color: white;
+    font-size: 15px;
+    padding: 5px;
+    border-radius: 20px;
+}
+.lessthan {
+    background-color: rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    color: gray;
+}
+.amount {
+    border: 1px solid white;
+    width: 100%;
+    background-color: #353a40;
+    height: 50px;
+    font-size: 20px;
+    padding: 10px;
+}
+.more {
+    border: 1px solid red;
+}
+.less {
+    border: 1px solid greenyellow;
+}
+.moreRate {
+    color: red;
 }
